# netctl

./: .dockerignore  .gitignore  BUILD_REPORT.md  Cargo.toml  Cross.toml  DOCS_UPDATE_SUMMARY.md  Dockerfile  FINAL_REVIEW.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REVIEW.md  TESTING.md
.github/workflows/: ci.yml
crates/netctl/: Cargo.toml
crates/netctl-config/: Cargo.toml
crates/netctl-config/src/: lib.rs
crates/netctl-config/src/systemd/: mod.rs
crates/netctl-config/src/yaml/: mod.rs
crates/netctl-core/: Cargo.toml
crates/netctl-core/src/: manager.rs
crates/netctl-dbus/: Cargo.toml
crates/netctl-dbus/src/: client.rs  lib.rs
crates/netctl-dbus/src/services/: hostnamed.rs  mod.rs  networkd.rs  resolved.rs
crates/netctl-netlink/: Cargo.toml
crates/netctl-netlink/src/: client.rs  lib.rs
crates/netctl-netlink/src/ops/: address.rs  link.rs  mod.rs
crates/netctl-types/: Cargo.toml
crates/netctl-types/src/: error.rs  lib.rs  logging.rs  network.rs  traits.rs
crates/netctl/src/: main.rs
crates/netctl/src/cli/: address.rs  apply.rs  backup.rs  completion.rs  dashboard.rs  diff.rs  doctor.rs  export.rs  history.rs  link.rs  mod.rs  profile.rs  show.rs  stats.rs  test.rs  tui.rs  validate.rs  watch.rs  wizard.rs
crates/netctl/src/tui/: app.rs  colors.rs  dashboard.rs  mod.rs
examples/: network-config.toml  network-config.yaml
