[package]
name = "netctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Modern network configuration tool"

[[bin]]
name = "netctl"
path = "src/main.rs"

[dependencies]
netctl-types.workspace = true
netctl-core.workspace = true
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
inquire.workspace = true
comfy-table.workspace = true
colored.workspace = true
tracing.workspace = true
miette.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
chrono.workspace = true
